--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "petrovich",
+  "name": "petrovich-parser",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.6",
-    "jsdom": "^24.0.0",
     "puppeteer": "^21.9.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.4"
   }
 }
